Some Members profile added

--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -62,9 +62,10 @@
         <br><br><br><br><br>
         <br><br><br><br><br>
         <br><br><br><br><br>
+        <br><br><br>
 
 
-        <div class="container-fluid" style="background-color:rgba( 0, 0, 0, 0.5 ); padding-top: 30px;">
+        <div class="container-fluid" style="background-color:rgba( 0, 0, 0, 0.5 ); padding: 50px;">
             <div class="row blog">
                 <div class="container">
                     <!-- Carousel -->
@@ -75,48 +76,11 @@
 
                             <div class="carousel-item active">
                                 <div class="row">
-                                    <div class="col-sm-4">
-
-                                    </div>
+                                    <div class="col-sm-4"></div>
                                     <div class="col-sm-8" style="padding-left:50px; color:white;">
                                         TITLE: May 17th, Our recent publication<br>
                                            DATE: 2021-05-17, 17:04<br>
                                             CONTENT: the notice menu is uploaded
-                                      </div>
-                                </div>
-                                <!--.row-->
-                            </div>
-                            <!--.item-->
-
-                            <div class="carousel-item">
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <a href="#" style="width:250px; color:white;">
-                                            <b style="font-size: 20px;">TITLE: 2021, the new web of selab is launched</b><br><br>
-                                            DATE: 2021-05-17, 17:04<br><br>
-                                            CONTENT: the notice menu is uploaded
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <a href="#" style="width:250px; color:white;">
-                                            <b style="font-size: 20px;">TITLE: May 17th, Our recent publication</b><br><br>
-                                            DATE: 2021-05-17, 17:04<br><br>
-                                            CONTENT: the notice menu is uploaded
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <a href="#" style="width:250px; color:white;">
-                                            <b style="font-size: 20px;">TITLE: 2021, the new web of selab is launched</b><br><br>
-                                            DATE: 2021-05-17, 17:04<br><br>
-                                            CONTENT: the notice menu is uploaded
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <a href="#" style="width:250px; color:white;">
-                                            <b style="font-size: 20px;">TITLE: 2021, the new web of selab is launched</b><br><br>
-                                            DATE: 2021-05-17, 17:04<br><br>
-                                            CONTENT: the notice menu is uploaded
-                                        </a>
                                     </div>
                                 </div>
                                 <!--.row-->
@@ -125,33 +89,24 @@
 
                             <div class="carousel-item">
                                 <div class="row">
-                                    <div class="col-md-3">
-                                        <a href="#" style="width:250px; color:white;">
-                                            <b style="font-size: 20px;">TITLE: 2021, the new web of selab is launched</b><br><br>
-                                            DATE: 2021-05-17, 17:04<br><br>
+                                    <div class="col-sm-4"></div>
+                                    <div class="col-sm-8" style="padding-left:50px; color:white;">
+                                        TITLE: May 17th, Our recent publication<br>
+                                           DATE: 2021-05-17, 17:04<br>
                                             CONTENT: the notice menu is uploaded
-                                        </a>
                                     </div>
-                                    <div class="col-md-3">
-                                        <a href="#" style="width:250px; color:white;">
-                                            <b style="font-size: 20px;">TITLE: May 17th, Our recent publication</b><br><br>
-                                            DATE: 2021-05-17, 17:04<br><br>
+                                </div>
+                                <!--.row-->
+                            </div>
+                            <!--.item-->
+
+                            <div class="carousel-item">
+                                <div class="row">
+                                    <div class="col-sm-4"></div>
+                                    <div class="col-sm-8" style="padding-left:50px; color:white;">
+                                        TITLE: May 17th, Our recent publication<br>
+                                           DATE: 2021-05-17, 17:04<br>
                                             CONTENT: the notice menu is uploaded
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <a href="#" style="width:250px; color:white;">
-                                            <b style="font-size: 20px;">TITLE: 2021, the new web of selab is launched</b><br><br>
-                                            DATE: 2021-05-17, 17:04<br><br>
-                                            CONTENT: the notice menu is uploaded
-                                        </a>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <a href="#" style="width:250px; color:white;">
-                                            <b style="font-size: 20px;">TITLE: 2021, the new web of selab is launched</b><br><br>
-                                            DATE: 2021-05-17, 17:04<br><br>
-                                            CONTENT: the notice menu is uploaded
-                                        </a>
                                     </div>
                                 </div>
                                 <!--.row-->
