--- a/templates/main/people.html
+++ b/templates/main/people.html
@@ -8,7 +8,7 @@
     <title>CBNU SELab - people</title>
     <!-- header -->
     {% block header %}
-    <link rel = "stylesheet" href="{% static 'css/people.css' %}?ver=1.4">
+    <link rel = "stylesheet" href="{% static 'css/people.css' %}?ver=1.6">
     <style>
     </style>
 
@@ -19,7 +19,7 @@
 <body>
 {% block contents %}
 
-    <div class="container-fluid text-center">
+    <div class="panel container-fluid text-center">
         <a style="font-size: 50px; "><b>Professor</b></a><br>
     </div>
     <div id="first_content" class="container-fluid row">
@@ -28,40 +28,93 @@
             <img src="../static/images/professor_hong.bmp" width="170px;">
         </div>
         <div class="col-lg-7">
-            <a style=" font-size: 25px;"><b>Jang Eui Hong (홍 장 의)</b></a><br>
+            <a style="font-size: 25px;"><b>Jang Eui Hong (홍 장 의)</b></a><br><br>
             <a style="font-size: 15px;">
                 2020 - Present, the dean of the software department<br>
                 2016 - Present, Director of Computer Information Services at Chungbuk National University<br>
                 2014 - Present, SSEF member<br>
                 2012 - Present, Director of the Software Engineering Society of the Korean Society of Information Science<br>
                 2011 - Present, Permanent Director of the Korea Small and Medium Business Convergence Society<br>
+                2004 - Present, Adviser of the Korea Defense Research Institute's Information Center<br>
                 2004 - Present, Professor of Computer Engineering at Chungbuk National University<br>
+                2001 - Doctor of Computer Science, KAIST.<br>
                 <br>
+
                 2010 ~ 2013 - App Center Director of Chungbuk National University<br>
+                2002 ~ 2004 - Director & Senior Consultant, Solution Link Technology Lab<br>
+                2002 ~ 2003 - Committee member preparing national technical guidance and technical cooperation guidance of the Ministry of Science and Technology<br>
+                2001 ~ 2002 - Defense Science Laboratory<br>
+                <br>
 
 
-                2001. KAIST 전산학과 박사
-                2001-2002. 국방과학연구소
-                2002-2003. 과기부 국가기술지도 및 기술협력지도 작성 위원
-                2002-2004. (주) 솔루션링크 기술 연구소장, 수석 컨설턴트
-                2004년. 한국국방연구원 정보화센터 자문위원
-                2011-현재. 한국중소기업융합학회 상임이사
 
-                -- 내용 더 넣어야 함 --
             </a>
         </div>
     </div>
 
-    <div class="container-fluid text-center">
+
+
+    <div class="panel container-fluid text-center">
         <a style="font-size: 50px;"><b>Members</b></a><br>
     </div>
-    <div style="background-color: white; padding-top:20px;" class="container-fluid row">
+
+    <div style="background-color: white; padding-top:20px;" class="member container-fluid row">
         <div class="col-lg-2"></div>
         <div class="col-lg-3 text-center">
-
+            <img src="../static/images/docter_ali3.png" width="170px;" style="border-radius: 7px;" />
         </div>
         <div class="col-lg-7">
-            <a>-- 다른 멤버들 내용 --</a>
+            <a style=" font-size: 25px;"><b>Nazakat Ali</b></a><br>
+            <a style="font-size: 15px;">
+                E-mail: kyj@selab.cbnu.ac.kr<br><br>
+                2020 - Present, M.S. course<br>
+                <br>
+            </a>
+        </div>
+    </div>
+
+    <div style="background-color: white; padding-top:20px;" class="member container-fluid row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-3 text-center">
+            <img src="../static/images/master_kyj.jpg" width="170px;" style="border-radius: 7px;" />
+        </div>
+        <div class="col-lg-7">
+            <a style=" font-size: 25px;"><b>Young Jae Kim (김 영 재)</b></a><br>
+            <a style="font-size: 15px;">
+                E-mail: kyj@selab.cbnu.ac.kr<br><br>
+                2020 - Present, M.S. course<br>
+
+                <br>
+
+
+            </a>
+
+        </div>
+        <br>
+
+    </div>
+
+
+
+
+    <div class="panel container-fluid text-center">
+        <a style="font-size: 50px;"><b>Other Members</b></a><br>
+    </div>
+    <div style="background-color: white; padding-top:20px;" class="member container-fluid row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-3 text-center">
+            <img src="../static/images/profile_img.png" width="170px;" style="border-radius: 7px;" />
+        </div>
+        <div class="col-lg-7">
+            <a style=" font-size: 25px;"><b>Nazakat Ali</b></a><br>
+            <a style="font-size: 15px;">
+                E-mail: kyj@selab.cbnu.ac.kr<br><br>
+                2020 - Present, M.S. course<br>
+
+                <br>
+
+
+            </a>
         </div>
     </div>
 
