--- a/static/css/people.css
+++ b/static/css/people.css
@@ -1,10 +1,19 @@
 #bg_img{
-    background-color: #BDBDBD;
+    background-color: white;
 
 }
 
 #first_content{
     padding-top: 20px;
     padding-bottom: 20px;
-    background-color: #F3F3F3;
+    background-color: white;
+}
+
+.panel{
+    background-color: #F6F6F6;
+    margin-bottom: 20px;
+}
+
+.member{
+    margin-bottom: 50px;
 }
