--- a/templates/base.html
+++ b/templates/base.html
@@ -78,20 +78,22 @@
         {% endblock %}
     </div> <!-- 와, 이게 되네 -->
 
-    <div class="container-fluid row" style="background-color: #7D7D7D;">
-        <br>
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8" style="padding-top:30px; padding-bottom:30px; color:white;">
-            <a>Copyright © CBNU SELab. All Rights Reserved.</a><br>
-            <a>Address: (S4-1)-303(3F), Chungdae-ro 1, Seowon-gu, Cheongju, Chungbuk, 28644, Republic of Korea</a><br>
-            <a>주소: (28644) 충북 청주시 서원구 충대로 1, 충북대학교 전자정보대학 소프트웨어학과 S4-1동(전자정보 3관) 303호</a><br>
-            <a>Tel) Fax)</a><br>
-            <a>Developer e-mail: takurway@gmail.com</a>
-        </div>
-        <div class="col-sm-2">
+    <div class="container-fluid" style="background-color: #7D7D7D;">
+        <div class="row">
+            <br>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8" style="padding-top:30px; padding-bottom:30px; color:white;">
+                <a>Copyright © CBNU SELab. All Rights Reserved.</a><br>
+                <a>Address: (S4-1)-303(3F), Chungdae-ro 1, Seowon-gu, Cheongju, Chungbuk, 28644, Republic of Korea</a><br>
+                <a>주소: (28644) 충북 청주시 서원구 충대로 1, 충북대학교 전자정보대학 소프트웨어학과 S4-1동(전자정보 3관) 303호</a><br>
+                <a>Tel) Fax)</a><br>
+                <a>Developer e-mail: takurway@gmail.com</a>
+            </div>
+            <div class="col-sm-2">
 
+            </div>
+            <br>
         </div>
-        <br>
     </div>
 
     {% if messages %}
