--- a/templates/main/people.html
+++ b/templates/main/people.html
@@ -85,6 +85,23 @@
                 2020 - Present, M.S. course<br>
 
                 <br>
+            </a>
+        </div>
+        <br>
+    </div>
+
+    <div style="background-color: white; padding-top:20px;" class="member container-fluid row">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-3 text-center">
+            <img src="../static/images/master_manzoor.png" width="170px;" style="border-radius: 7px;" />
+        </div>
+        <div class="col-lg-7">
+            <a style=" font-size: 25px;"><b>Manzoor Hussain</b></a><br>
+            <a style="font-size: 15px;">
+                E-mail: hussain@selab.cbnu.ac.kr<br><br>
+                2020 - Present, M.S. course<br>
+
+                <br>
 
 
             </a>
@@ -106,9 +123,9 @@
             <img src="../static/images/profile_img.png" width="170px;" style="border-radius: 7px;" />
         </div>
         <div class="col-lg-7">
-            <a style=" font-size: 25px;"><b>Nazakat Ali</b></a><br>
+            <a style=" font-size: 25px;"><b>블라블라</b></a><br>
             <a style="font-size: 15px;">
-                E-mail: kyj@selab.cbnu.ac.kr<br><br>
+                E-mail: 블라블라@selab.cbnu.ac.kr<br><br>
                 2020 - Present, M.S. course<br>
 
                 <br>
