--- a/templates/main/publication.html
+++ b/templates/main/publication.html
@@ -4,15 +4,13 @@
 
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>CBNU SELab - people</title>
     <!-- header -->
     {% block header %}
+    <meta charset="UTF-8">
+    <title>CBNU SELab - Publication</title>
     <link rel = "stylesheet" href="{% static 'css/publication.css' %}?ver=1.1">
     <style>
-
     </style>
-
     {% endblock %}
 </head>
 <!-- body contents -->
