--- a/templates/main/people.html
+++ b/templates/main/people.html
@@ -4,14 +4,13 @@
 
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>CBNU SELab - people</title>
     <!-- header -->
     {% block header %}
+    <meta charset="UTF-8">
+    <title>CBNU SELab - People</title>
     <link rel = "stylesheet" href="{% static 'css/people.css' %}?ver=1.6">
     <style>
     </style>
-
     {% endblock %}
 </head>
 <!-- body contents -->
