--- a/templates/notice/notice_list.html
+++ b/templates/notice/notice_list.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 {% extends "base.html" %}
 {% load static %}
-{% block contents %}
-<html lang="en">
-<head>
 
+<html lang="en">
+
+<head>
+{% block header %}
     <meta charset="UTF-8">
     <title>SELab - Notice</title>
-    <link rel = "stylesheet" href="{% static 'css/notice.css' %}?ver=1.3">
+    <link rel = "stylesheet" href="{% static 'css/notice.css' %}?ver=1.4">
 
     <style>
         table a: hover{
@@ -18,19 +19,33 @@
             font-family: Blacksword;
             src: url('../../static/fonts/Blacksword.otf');
         }
-    </style>
 
+        tr{
+            font-size: 14px;
+        }
+        .table_title{
+            color: black;
+        }
+        .table_title:hover {
+            color: grey;
+        }
+        .table-secondary:hover {
+            color: #980000;
+        }
+    </style>
+{% endblock %}
 </head>
 <body>
-
+{% block contents %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>   <!-- 1 -->
     <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>               <!-- 2 -->
+
     <br><br>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-8">
-                <a href="." style="color:black; font-weight: bold; letter-spacing: 2px;"><font face="Blacksword" size="5.5rem">< Notice ></font></a><br><br>
+                <a class="table_title" href="." style="font-weight: bold;"><font face="" size="5.5rem">Notice</font></a><br><br>
                 <table class="table table-hover">
 
 
@@ -39,7 +54,7 @@
                     {% endif %}
 
                     <thead>
-                        <tr style="font-size:17px;">
+                        <tr style="font-size:14px;">
                             <th>No.</th>
                             <th>Title</th>
                             <th>Writer</th>
@@ -51,7 +66,7 @@
                         {% else %}
                         {% if notice_fixed %}
                         {% for notice in notice_fixed %}
-                        <tr class="table-secondary" style="font-weight: bold; cursor:pointer;" onclick="location.href='/notice/{{ notice.id }}/'">
+                        <tr class="table-secondary" style="cursor:pointer;" onclick="location.href='/notice/{{ notice.id }}/'">
                             <td>{{ notice.id }}</td>
                             <td class="text-left" style="width:50%"><a id="notice-{{ notice.id }}"><i class="fas fa-bullhorn" style="color: #980000;"></i> &nbsp; {{ notice.title|truncatechars:30 }}</a></td>
                             <td>{{ notice.writer }}</td>
@@ -131,13 +146,10 @@
                 </form>
 
             </div>
+
             <!-- col-sm-8 -->
 
         </div>
-
-
-
-
 
     </div>
 
@@ -151,7 +163,7 @@
     이 프로젝트에서는 따로 검색 View를 구현하지 않고 ListView로 묶어 구현했기 때문에
     페이지네이션 부분의 href 소스도 파라미터를 전달 할 수 있도록 아래와 같이 수정
     -->
-    <div class="container-fluid ">
+    <div class="container-fluid " style="float:none;">
         <div class="row text-center">
             <!-- 페이지가 생성되면, -->
             {% if is_paginated %}
@@ -178,12 +190,15 @@
 
                 {% if page_obj.has_next %}
                 <li class="page-item">
-                    <a class="page-link"
-                        href="?type={{ type }}&q={{ q }}&page={{ page_obj.next_page_number }}">Next</a>
+                    <a class="page-link" href="?type={{ type }}&q={{ q }}&page={{ page_obj.next_page_number }}">
+                        Next
+                    </a>
                 </li>
                 {% else %}
                 <li class="page-item disabled">
-                    <a class="page-link" href="#">Next</a>
+                    <a class="page-link" href="#">
+                        Next
+                    </a>
                 </li>
                 {% endif %}
             </ul>
@@ -191,9 +206,11 @@
 
         </div>
     </div>
+    <br><br>
 
 
+{% endblock %}
 </body>
 </html>
-{% endblock %}
+
 
