--- a/templates/main/research.html
+++ b/templates/main/research.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <title>CBNU SELab - Research</title>
     <link rel = "stylesheet" href="{% static 'css/research.css' %}?ver=1.1">
+    <link rel = "stylesheet" href="{% static 'css/people.css' %}?ver=1.7">
     <style>
     </style>
     {% endblock %}
@@ -18,12 +19,8 @@
 <body>
 {% block contents %}
 
-    <div class="container-fluid text-center">hi</div>
-    <div class="container-fluid text-center">hi</div>
-<div class="container-fluid text-center">hi</div>
-<div class="container-fluid text-center">hi</div>
-<div class="container-fluid text-center">hi</div>
-<div class="container-fluid text-center">hi</div>
+    <div class="panel container-fluid text-center"><a style="font-size: 50px;"><b>Research</b></a></div>
+
 {% endblock %}
 </body>
 
