--- a/templates/notice/notice_list.html
+++ b/templates/notice/notice_list.html
@@ -116,6 +116,7 @@
 
                 <!-- 검색어 입력창 -->
                 <form action="" method="GET">
+                    {% csrf_token %}
                     <div class="col">
                         <div style="float: right;" class="form-row">
 
