--- a/static/css/login.css
+++ b/static/css/login.css
@@ -34,7 +34,7 @@
     padding-left: 40px;
     padding-bottom: 10px;
     box-sizing: border-box;
-    background-image:url(../image/icon/login.gif);
+    background-image:url(../images/icon/login.gif);
     background-repeat: no-repeat;
     background-position: 3px 3px;
     background-size: 25px 25px;
