--- a/templates/base.html
+++ b/templates/base.html
@@ -56,16 +56,19 @@
                         <a class="nav-link"  href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="/people">People</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"  href="/research">Research</a>
+                        <a class="nav-link"  href="/ppr/people">People</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"  href="/publication">Publication</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link"  href="/research">Research</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link"  href="/notice">Notice</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"  href="/gallery">Gallery</a>
                     </li>
                 </ul>
             </div>
