--- a/templates/main/publication.html
+++ b/templates/main/publication.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <title>CBNU SELab - Publication</title>
     <link rel = "stylesheet" href="{% static 'css/publication.css' %}?ver=1.1">
+    <link rel = "stylesheet" href="{% static 'css/people.css' %}?ver=1.7">
 
     {% endblock %}
 </head>
@@ -16,8 +17,7 @@
 
 <body>
 {% block contents %}
-    <div class="container-fluid text-center"><a style="font-size: 50px;">Publication</a></div>
-    <div>hi</div>
+    <div class="panel container-fluid text-center"><a style="font-size: 50px;"><b>Publication</b></a></div>
 {% endblock %}
 </body>
 
