--- a/templates/ppr/people.html
+++ b/templates/ppr/people.html
@@ -24,32 +24,33 @@
     <div id="first_content" class="container-fluid row">
         <div class="col-lg-2"></div>
         <div class="col-lg-2">
-            <img src="../static/images/professor_hong.bmp" width="170px;">
+            <img src="../../static/images/professor_hong.bmp" width="170px;">
         </div>
         <div class="col-lg-8">
             <a style="font-size: 25px;"><b>Jang Eui Hong (홍 장 의)</b></a><br><br>
-            <a style="font-size: 15px;">
-                2020 - Present, the dean of the software department<br>
-                2016 - Present, Director of Computer Information Services at Chungbuk National University<br>
-                2014 - Present, SSEF member<br>
-                2012 - Present, Director of the Software Engineering Society of the Korean Society of Information Science<br>
-                2011 - Present, Permanent Director of the Korea Small and Medium Business Convergence Society<br>
-                2004 - Present, Adviser of the Korea Defense Research Institute's Information Center<br>
-                2004 - Present, Professor of Computer Engineering at Chungbuk National University<br>
-                2001 - Doctor of Computer Science, KAIST.<br>
-                <br>
 
-                2010 ~ 2013 - App Center Director of Chungbuk National University<br>
-                2002 ~ 2004 - Director & Senior Consultant, Solution Link Technology Lab<br>
-                2002 ~ 2003 - Committee member preparing national technical guidance and technical cooperation guidance of the Ministry of Science and Technology<br>
-                2001 ~ 2002 - Defense Science Laboratory<br>
-                <br>
+            {{ people_first.content | safe }}
 
-
-
-            </a>
         </div>
     </div>
+
+    <script>
+        var arrInput = new Array(0);
+        var arrInputValue = new Array(0);
+
+        function addInput(){
+            arrInput.push(arrInput.length);
+            arrInput
+        }
+    </script>
+
+    <!-- 글쓰기 버튼 -->
+    <div class="modifyButton" style="text-align: right;">
+        {% if request.user.level == '0' or request.user.level == '1' %}
+            <a href="modifyContent/" class="btn btn-success" onclick="addInput();">Modify</a>
+        {% endif %}
+    </div>
+
 
 
 
@@ -60,13 +61,14 @@
     <div style="background-color: white; padding-top:20px;" class="member container-fluid row">
         <div class="col-lg-2"></div>
         <div class="col-lg-2">
-            <img src="../static/images/docter_ali3.png" width="170px;" style="border-radius: 7px;" />
+            <img src="../../static/images/docter_ali3.png" width="170px;" style="border-radius: 7px;" />
         </div>
         <div class="col-lg-8">
             <a style=" font-size: 25px;"><b>Nazakat Ali</b></a><br>
             <a style="font-size: 15px;">
-                E-mail: kyj@selab.cbnu.ac.kr<br><br>
-                2020 - Present, M.S. course<br>
+                E-mail: nazakatali@selab.cbnu.ac.kr<br><br>
+                2018 - 2021, Ph.D. Computer Science, CBNU<br>
+                2016 - 2018, M.S. Computer Science, CBNU
                 <br>
             </a>
         </div>
@@ -75,13 +77,13 @@
     <div style="background-color: white; padding-top:20px;" class="member container-fluid row">
         <div class="col-lg-2"></div>
         <div class="col-lg-2">
-            <img src="../static/images/master_kyj.jpg" width="170px;" style="border-radius: 7px;" />
+            <img src="../../static/images/master_kyj.jpg" width="170px;" style="border-radius: 7px;" />
         </div>
         <div class="col-lg-8">
             <a style=" font-size: 25px;"><b>Young Jae Kim (김 영 재)</b></a><br>
             <a style="font-size: 15px;">
                 E-mail: kyj@selab.cbnu.ac.kr<br><br>
-                2020 - Present, M.S. course<br>
+                2020 - Present, M.S. Computer Science, CBNU<br>
 
                 <br>
             </a>
@@ -92,13 +94,13 @@
     <div style="background-color: white; padding-top:20px;" class="member container-fluid row">
         <div class="col-lg-2"></div>
         <div class="col-lg-2">
-            <img src="../static/images/master_manzoor.png" width="170px;" style="border-radius: 7px;" />
+            <img src="../../static/images/master_manzoor.png" width="170px;" style="border-radius: 7px;" />
         </div>
         <div class="col-lg-8">
             <a style=" font-size: 25px;"><b>Manzoor Hussain</b></a><br>
             <a style="font-size: 15px;">
                 E-mail: hussain@selab.cbnu.ac.kr<br><br>
-                2020 - Present, M.S. course<br>
+                2020 - Present, M.S. Computer Science, CBNU<br>
 
                 <br>
 
@@ -108,6 +110,14 @@
         </div>
         <br>
 
+    </div>
+    <!-- 글쓰기 버튼 -->
+    <div class="modifyButton" style="text-align: right;">
+        {% if request.user.level == '0' or request.user.level == '1' %}
+            <a href="write/" class="btn btn-primary" onclick="addInput();">Add</a>
+            <a href="write/" class="btn btn-success">Modify</a>
+            <a href="write/" class="btn btn-danger">Delete</a>
+        {% endif %}
     </div>
 
 
@@ -115,18 +125,18 @@
 
 
     <div class="panel container-fluid text-center">
-        <a style="font-size: 50px;"><b>Other Members</b></a><br>
+        <a style="font-size: 50px;"><b>Other Staff</b></a><br>
     </div>
     <div style="background-color: white; padding-top:20px;" class="member container-fluid row">
         <div class="col-lg-2"></div>
         <div class="col-lg-2">
-            <img src="../static/images/profile_img.png" width="170px;" style="border-radius: 7px;" />
+            <img src="../../static/images/profile_img.png" width="170px;" style="border-radius: 7px;" />
         </div>
         <div class="col-lg-8">
-            <a style=" font-size: 25px;"><b>블라블라</b></a><br>
+            <a style=" font-size: 25px;"><b>Ha Eun Lee</b></a><br>
             <a style="font-size: 15px;">
-                E-mail: 블라블라@selab.cbnu.ac.kr<br><br>
-                2020 - Present, M.S. course<br>
+                E-mail: @selab.cbnu.ac.kr<br><br>
+                2019 - Present, B.S. Software department, CBNU<br>
 
                 <br>
 
@@ -134,6 +144,17 @@
             </a>
         </div>
     </div>
+
+    <!-- 글쓰기 버튼 -->
+    <div class="modifyButton" style="text-align: right;">
+        {% if request.user.level == '0' or request.user.level == '1' %}
+            <a href="write/" class="btn btn-primary" onclick="addInput();">Add</a>
+            <a href="write/" class="btn btn-success">Modify</a>
+            <a href="write/" class="btn btn-danger">Delete</a>
+        {% endif %}
+    </div>
+
+
 
 {% endblock %}
 </body>
