--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                         <a class="nav-link"  href="/notice">Notice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="/gallery">Gallery</a>
+                        <a class="nav-link"  href="/ppr/gallery">Gallery</a>
                     </li>
                 </ul>
             </div>
