--- a/templates/ppr/gallery.html
+++ b/templates/ppr/gallery.html
@@ -11,7 +11,19 @@
 </head>
 <body>
     {% block contents %}
-    <div>hi</div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <br>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                <img src="../../static/images/teacher's_day.jpg" width="550px;">
+                <a>blahblah~</a><br>
+            </div>
+            <div class="col-sm-2"></div>
+            <br>
+        </div>
+    </div>
     {% endblock %}
 </body>
 </html>
