--- a/templates/notice/notice_write.html
+++ b/templates/notice/notice_write.html
@@ -24,7 +24,7 @@
 
     <br><br>
 
-    <form class="container" action="" method="POST">
+    <form class="container" method="POST">
         {% csrf_token %}
         <div class="card">
             <div class="card-header">
