--- a/templates/base.html
+++ b/templates/base.html
@@ -5,14 +5,21 @@
 
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=1.7">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=2.3">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
     <style>
+        .menu_focus:hover{
+            cursor:pointer;
+        }
+
+        .dropdown-item:active {
+            background-color: #EAEAEA; /* 클릭시 드롭다운 메뉴 배경색 변경 */
+        }
 
     </style>
     <script type="text/javascript">
@@ -43,8 +50,8 @@
         </div>
 
         <nav class="bg-light navbar-light navbar navbar-expand-lg navbar-white sticky-top" style="background-color:rgba( 234, 234, 234, 0.50 ) !important;">
-            <a class="mr-auto" href="/"><img src="{% static 'images/SELab_logo2-removed.png' %}" alt="Logo" width="60" /></a>
-            <a class="logoName" href="/"><font face="">Software Engineering Lab</font></a>
+            <a style="margin-left:5px;" class="mr-auto" href="/"><img src="{% static 'images/icon/selab_logo.png' %}" alt="Logo" width="50" /></a>
+            <a class="logoName" href="/"><font>Software Engineering Lab</font></a>
             <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -55,20 +62,24 @@
                     <li class="nav-item">
                         <a class="nav-link"  href="/">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link"  href="/ppr/people">People</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link menu_focus" data-toggle="dropdown">People</a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown-item"><a class="nav-link" style="width: 130px !important; padding-right: 0px !important;" href="/ppr/professor">Professor</a></li>
+                            <li class="dropdown-item"><a class="nav-link" style="width: 130px !important; padding-right: 0px !important;" href="/ppr/members">Members</a></li>
+                        </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="/publication">Publication</a>
+                        <a class="nav-link"  href="/ppr/publication">Publication</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"  href="/research">Research</a>
+                        <a class="nav-link"  href="/ppr/research">Research</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"  href="/notice">Notice</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link"  href="/ppr/gallery">Gallery</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="/ppr/gallery">Gallery</a>
                     </li>
                 </ul>
             </div>
@@ -82,7 +93,7 @@
     </div> <!-- 와, 이게 되네 -->
 
 
-    <div class="container-fluid" style="background-color: #7D7D7D;">
+    <div class="container-fluid main-footer">
         <div class="row">
             <br>
             <div class="col-sm-2"></div>
