--- a/templates/notice/notice_list.html
+++ b/templates/notice/notice_list.html
@@ -8,30 +8,25 @@
 {% block header %}
     <meta charset="UTF-8">
     <title>SELab - Notice</title>
-    <link rel = "stylesheet" href="{% static 'css/notice.css' %}?ver=1.4">
-
+    <link rel = "stylesheet" href="{% static 'css/notice.css' %}?ver=1.1">
+    <link rel = "stylesheet" href="{% static 'css/people.css' %}?ver=1.2">
     <style>
-        table a: hover{
-            color: black !important;
-        }
-
         @font-face{
             font-family: Blacksword;
             src: url('../../static/fonts/Blacksword.otf');
         }
-
-        tr{
-            font-size: 14px;
-        }
-        .table_title{
+        .pagination .active .page-link{
+            background-color: #EAEAEA !important;
+            border-color: #D5D5D5;
             color: black;
         }
-        .table_title:hover {
-            color: grey;
+        .page-link{
+            color: black;
         }
-        .table-secondary:hover {
-            color: #980000;
+        .disabled .page-link{
+            color: white;
         }
+
     </style>
 {% endblock %}
 </head>
@@ -40,12 +35,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>   <!-- 1 -->
     <script type="text/javascript" src="{% static 'js/bootstrap.js' %}"></script>               <!-- 2 -->
 
-    <br><br>
+    <div class="panel container-fluid text-center"><a class="panel-name"><b>Notice</b></a></div>
+
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-2"></div>
             <div class="col-sm-8">
-                <a class="table_title" href="." style="font-weight: bold;"><font face="" size="5.5rem">Notice</font></a><br><br>
                 <table class="table table-hover">
 
 
@@ -145,9 +140,7 @@
                         </div>
                     </div>
                 </form>
-
             </div>
-
             <!-- col-sm-8 -->
 
         </div>
@@ -184,7 +177,7 @@
 
                 <!-- 페이지 번호-->
                 {% for page in page_range %}
-                <li class="page-item {% if page == page_obj.number %} activate {% endif %}"> <!-- view에서 넘겨받은 context 사용 -->
+                <li class="page-item {% if page == page_obj.number %} active {% endif %}"> <!-- view에서 넘겨받은 context 사용 -->
                     <a class="page-link" href="?type={{ type }}&q={{ q }}&page={{ page }}">{{ page }}</a>
                 </li>
                 {% endfor %}
