--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -81,6 +81,7 @@
                 <div class="btnwrap">
                     <a href="../agreement">Sign-up</a>
                     <input type="submit" id="login_btn" value="Login">
+                    <input name="next" type="hidden" value="{{ request.path }}">
                 </div>
 
 
