--- a/templates/ppr/journal_write.html
+++ b/templates/ppr/journal_write.html
@@ -29,10 +29,11 @@
             <div class="card-body">
                 {{ form.journals }}
             </div><br>
+
             <label>Issued date: </label><br>
             <div class="">
                 {{ form.issued_date }}
-            </div>
+            </div><br>
         </div>
         <br>
         <!-- modify button for modifying mode, delete / to the list && save for writing mode -->
